Update Post “2020-03-15-test”

--- a/source/_posts/2020-03-15-test.md
+++ b/source/_posts/2020-03-15-test.md
@@ -1,6 +1,6 @@
 ---
 layout: blog
-title: test
+title: testtest
 lang: en
 date: '2020-03-15T18:53:43-04:00'
 thumbnail: /images/uploads/netlify-logo.png
